--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -1,12 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
-  font-family: "Montserrat";
-  /* font-family: "Inter"; */
+  /* font-family: "Montserrat"; */
+  font-family: "Inter";
   color: white;
 }
 html,
@@ -37,6 +38,7 @@ p {
 }
 nav {
   position: absolute;
+  transition: all 250ms ease-out;
 }
 nav .links {
   display: inline-block;
@@ -47,14 +49,92 @@ nav a {
   font-weight: 500;
   padding-bottom: 8px;
   border-bottom: 3px solid transparent;
+  transition: all 250ms ease-out;
 }
 nav a:hover {
   border-color: white;
   border-radius: 1px;
   color: #dba704;
 }
-footer p {
-  text-align: center;
-  color: #bbb;
+footer {
+  background-color: #1e1e1e;
+  padding: 20px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  grid-template-columns: 1fr 0.2fr 1fr;
+  position: relative;
+}
+
+.forms {
+  display: grid;
+  justify-content: center;
+}
+
+.forms form {
+  background-color: #dba704;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 48px;
+  gap: 20px;
+  border-radius: 30px;
+}
+
+.forms form h4 {
+  color: #000000;
+}
+
+.email {
+  border: 0;
+  outline: none;
+  font-size: 16px;
+  width: 100%;
+  color: #000000;
+  background-color: transparent;
+  transition: ease-out 0.2s;
+  border-bottom: 1px solid #000000;
+}
+
+.email::placeholder {
+  color: #000000;
+  opacity: 1;
+}
+
+.address {
+  display: flex;
+  justify-content: space-around;
+}
+
+.social {
+  font-size: 20px;
+  display: flex;
+  gap: 15px;
+}
+
+.social * {
+  transition: all 250ms ease-out;
+}
+
+.social *:hover {
+  transform: translateY(-4px);
+  color: #dba704;
+}
+
+.copyright {
+  color: #fff;
   margin: 40px auto;
+}
+.blomar p {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  white-space: nowrap;
+  position: absolute;
+  bottom: 0;
+}
+.blomar img {
+  max-width: 70%;
 }
