--- a/src/components/styles/artists.module.css
+++ b/src/components/styles/artists.module.css
@@ -1,11 +1,37 @@
 .artist {
-  text-align: center;
+  /* text-align: center; */
   height: 100vh;
   display: flex;
   place-content: center;
+  background-image: url("../images/Elements.svg");
+  background-position: top right;
+  background-repeat: no-repeat;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  transition: all 250ms ease-out;
 }
 
 .artist h2 {
   font-size: 3em;
-  margin-top: 80px;
+  margin-left: 20px;
+  color: #fff;
+}
+
+.artistList {
+  display: grid;
+  font-weight: 700;
+  font-size: 40px;
+  position: relative;
+  left: 50%;
+  top: 20%;
+  width: fit-content;
+}
+
+.art {
+  color: white;
+  transition: all 250ms ease-out;
+}
+
+.art:hover {
+  color: #dba704;
 }
