--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap");
+
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
-  /* font-family: "Montserrat"; */
-  font-family: "Inter";
+  font-family: "Montserrat";
   color: white;
 }
 html,
@@ -15,47 +15,67 @@ body {
   min-height: 100%;
 }
 body {
-  background: radial-gradient(
+  background-image: url("../images/Background.svg"),
+    radial-gradient(at top left, rgba(30, 30, 30, 1) 0%, #000000 100%);
+  /* background: radial-gradient(
     at top left,
     rgba(30, 30, 30, 1) 0%,
     #000000 100%
-  );
-
+  ); */
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
 .logo {
   color: #dba704;
+  font-weight: 700;
+  font-size: larger;
 }
 p {
   margin: 16px auto;
   line-height: 1.5em;
 }
 
+.hambg {
+  color: #dba704;
+  border: 1.5px #dba704 solid;
+}
+
 /* layout & nav */
 .layout {
   margin: 0 auto;
 }
-nav {
-  position: absolute;
+.navbar {
+  background-color: transparent;
   transition: all 250ms ease-out;
+  display: flex;
+  align-items: center;
 }
-nav .links {
+
+.navbar-item {
   display: inline-block;
 }
-nav a {
+.navbar-item {
   display: inline-block;
   margin: 20px;
   font-weight: 500;
   padding-bottom: 8px;
   border-bottom: 3px solid transparent;
   transition: all 250ms ease-out;
+  color: #dba704;
 }
-nav a:hover {
-  border-color: white;
+
+.navbar-item:hover {
+  /* border-color: white; */
   border-radius: 1px;
   color: #dba704;
 }
+
+.nav-menu {
+  display: flex;
+  align-items: center;
+}
+
 footer {
   background-color: #1e1e1e;
   padding: 20px;
