--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
@@ -7,7 +6,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-  font-family: "Montserrat";
+  font-family: "Inter";
   color: white;
 }
 html,
@@ -15,8 +14,11 @@ body {
   min-height: 100%;
 }
 body {
-  background-image: url("../images/Background.svg"),
-    radial-gradient(at top left, rgba(30, 30, 30, 1) 0%, #000000 100%);
+  background-image: radial-gradient(
+    at top left,
+    rgba(30, 30, 30, 1) 0%,
+    #000000 100%
+  );
   /* background: radial-gradient(
     at top left,
     rgba(30, 30, 30, 1) 0%,
@@ -41,28 +43,17 @@ p {
   border: 1.5px #dba704 solid;
 }
 
-/* layout & nav */
-.layout {
-  margin: 0 auto;
-}
-.navbar {
-  background-color: transparent;
-  transition: all 250ms ease-out;
-  display: flex;
-  align-items: center;
-}
-
 .navbar-item {
   display: inline-block;
 }
 .navbar-item {
   display: inline-block;
-  margin: 20px;
+  text-decoration: none;
   font-weight: 500;
   padding-bottom: 8px;
   border-bottom: 3px solid transparent;
   transition: all 250ms ease-out;
-  color: #dba704;
+  color: #fff;
 }
 
 .navbar-item:hover {
@@ -104,6 +95,7 @@ footer {
 
 .forms form h4 {
   color: #000000;
+  font-weight: bold;
 }
 
 .email {
@@ -157,4 +149,42 @@ footer {
 }
 .blomar img {
   max-width: 70%;
+}
+
+/* Navbar extra styles */
+
+.navbar {
+  transition: all 250ms ease-out;
+  background-color: transparent;
+  background-color: #252526;
+  padding: 20px;
+}
+
+a.navbar-item:hover {
+  color: #dba704;
+  background-color: transparent;
+}
+
+@media only screen and (max-width: 600px) {
+  .navbar-menu {
+    transition: all 250ms ease-out;
+    background-color: transparent;
+  }
+
+  footer {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .address {
+    display: none;
+  }
+
+  .copyright {
+    text-align: center;
+  }
+  .blomar p {
+    position: static;
+    text-align: center;
+  }
 }
