--- a/src/components/styles/home.module.css
+++ b/src/components/styles/home.module.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   margin-bottom: 100px;
+  padding: 20px;
   height: 100vh;
   /* url("../images/Background.svg"), */
 }
@@ -22,10 +23,17 @@
   top: 10%;
 }
 
+.six {
+  position: relative;
+  left: 22%;
+}
+
 .intro p {
   max-width: 515px;
   font-size: 24px;
   line-height: 40px;
+  position: relative;
+  top: -20px;
 }
 
 .topImage {
@@ -47,4 +55,78 @@
 
 .bottomImage img {
   max-width: 100%;
+}
+
+.meet {
+  display: none;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .header {
+    height: 110vh;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 100px;
+    gap: 0;
+  }
+
+  .header h2 {
+    font-size: 70px;
+    margin-bottom: 0;
+    position: relative;
+    left: 10%;
+    width: fit-content;
+  }
+
+  .six {
+    position: relative;
+    left: 40%;
+  }
+
+  .intro {
+    left: 0%;
+    top: 8%;
+  }
+
+  .intro p {
+    min-width: 299px;
+    font-size: 18px;
+    line-height: 32px;
+  }
+
+  .topImage {
+    width: 327px;
+    right: 35%;
+    top: 10%;
+    margin-bottom: 30px;
+  }
+
+  .topImage img {
+    width: 100%;
+  }
+
+  .bottomImage img {
+    width: 157px;
+  }
+
+  .bottomImage {
+    left: 0%;
+    top: 10%;
+    display: flex;
+  }
+
+  .meet {
+    display: flex;
+    align-self: center;
+    font-weight: bold;
+    font-size: 20px;
+    color: #fff;
+    text-decoration: none;
+    transition: all 250ms ease-out;
+  }
+
+  .meet:active {
+    color: #dba704;
+  }
 }
