add desktop version individual artist page

--- a/src/components/styles/korsah.module.css
+++ b/src/components/styles/korsah.module.css
@@ -1,16 +1,29 @@
 .korsah {
   text-align: center;
   height: 100vh;
-  display: flex;
   place-content: center;
-  background: radial-gradient(
-    at top left,
-    rgba(30, 30, 30, 1) 0%,
-    #000000 100%
-  );
+  background: #000000;
+  display: grid;
+  grid-template-columns: 0.8fr 1.5fr;
 }
 
 .korsah h1 {
   font-size: 3em;
+  color: #fff;
   margin-top: 80px;
+}
+
+.yellow {
+  background: #8f6d03;
+  height: 110vh;
+}
+
+.yellow img {
+  position: relative;
+  left: 40%;
+  top: 20%;
+}
+
+.blue {
+  background: #353f5b;
 }
