--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -14,25 +14,20 @@ body {
   min-height: 100%;
 }
 body {
-  background-image: radial-gradient(
-    at top left,
-    rgba(30, 30, 30, 1) 0%,
-    #000000 100%
-  );
-  /* background: radial-gradient(
-    at top left,
-    rgba(30, 30, 30, 1) 0%,
-    #000000 100%
-  ); */
-  background-size: cover;
-  background-repeat: no-repeat;
+  background: #000000;
 }
 
 .logo {
   color: #dba704;
   font-weight: 700;
   font-size: larger;
+  /* width: 70px; */
 }
+
+.logo img {
+  max-width: 50px;
+}
+
 p {
   margin: 16px auto;
   line-height: 1.5em;
@@ -157,7 +152,7 @@ footer {
   transition: all 250ms ease-out;
   background-color: transparent;
   background-color: #252526;
-  padding: 20px;
+  padding: 10px;
 }
 
 a.navbar-item:hover {
