--- a/src/components/styles/korsah.module.css
+++ b/src/components/styles/korsah.module.css
@@ -7,10 +7,13 @@
   grid-template-columns: 0.8fr 1.5fr;
 }
 
-.korsah h1 {
-  font-size: 3em;
+.korsah h4 {
+  font-size: 2.5em;
   color: #fff;
   margin-top: 80px;
+  position: relative;
+  right: 15%;
+  top: 10%;
 }
 
 .yellow {
@@ -26,4 +29,58 @@
 
 .blue {
   background: #353f5b;
+}
+
+.biography {
+  text-align: left;
+  max-width: 431px;
+  position: relative;
+  left: 30%;
+  top: 10%;
+}
+
+.biography h5 {
+  color: #fff;
+  font-size: 20px;
+}
+
+.biography p {
+  font-size: 16px;
+  line-height: 30px;
+}
+
+@media only screen and (max-width: 600px) {
+  .korsah {
+    display: flex;
+    background-color: #0a1733;
+    height: fit-content;
+    flex-direction: column-reverse;
+  }
+
+  .korsah h4 {
+    right: 30%;
+    margin: 40px 0px 25px;
+  }
+
+  .blue {
+    height: fit-content;
+    background-color: #0a1733;
+  }
+
+  .yellow {
+    height: 50vh;
+    margin-top: 50px;
+    padding: 20px;
+  }
+
+  .yellow img {
+    left: 0%;
+    top: -20%;
+    width: 318px;
+  }
+
+  .biography {
+    position: static;
+    padding: 15px;
+  }
 }
