--- a/src/components/styles/home.module.css
+++ b/src/components/styles/home.module.css
@@ -8,7 +8,8 @@
   background-size: cover;
   margin-bottom: 100px;
   padding: 20px;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   /* url("../images/Background.svg"), */
 }
 .header h2 {
