--- a/src/components/styles/korsah.module.css
+++ b/src/components/styles/korsah.module.css
@@ -1,6 +1,5 @@
 .korsah {
-  text-align: center;
-  height: 100vh;
+  height: 100%;
   place-content: center;
   background: #000000;
   display: grid;
@@ -10,33 +9,24 @@
 .korsah h4 {
   font-size: 2.5em;
   color: #fff;
-  margin-top: 80px;
-  position: relative;
-  right: 15%;
-  top: 10%;
 }
 
 .yellow {
   background: #8f6d03;
-  height: 110vh;
 }
 
 .yellow img {
-  position: relative;
-  left: 40%;
-  top: 20%;
+  transform: translate(35%, 30%);
 }
 
 .blue {
   background: #353f5b;
+  padding: 17% 18% 20vw 30%;
 }
 
 .biography {
   text-align: left;
-  max-width: 431px;
-  position: relative;
-  left: 30%;
-  top: 10%;
+  padding-left: 5%;
 }
 
 .biography h5 {
@@ -58,12 +48,12 @@
   }
 
   .korsah h4 {
-    right: 30%;
-    margin: 10px 0px 25px;
+    margin: 10px 20px 25px;
   }
 
   .blue {
     height: fit-content;
+    padding: 10% 0%;
     background-color: #0a1733;
   }
 
@@ -74,13 +64,6 @@
   }
 
   .yellow img {
-    left: 0%;
-    top: -20%;
-    width: 318px;
-  }
-
-  .biography {
-    position: static;
-    padding: 15px;
+    transform: translate(0%, -20%);
   }
 }
