--- a/src/components/styles/korsah.module.css
+++ b/src/components/styles/korsah.module.css
@@ -11,38 +11,45 @@
   color: #fff;
 }
 
-.yellow {
-  background: #8f6d03;
-}
-
 .yellow img {
-  transform: translate(35%, 30%);
+  max-width: 100%;
+  transform: translate(35%, 45%);
 }
 
 .blue {
-  background: #353f5b;
-  padding: 17% 18% 20vw 30%;
+  padding: 17% 18% 5vw 30%;
 }
 
 .biography {
-  text-align: left;
-  padding-left: 5%;
+  text-align: justify;
+  padding: 5%;
 }
 
 .biography h5 {
-  color: #fff;
+  color: #dba704;
   font-size: 20px;
 }
 
 .biography p {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 30px;
+}
+
+.listen {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.spotify iframe {
+  border-radius: 10px;
 }
 
 @media only screen and (max-width: 600px) {
   .korsah {
     display: flex;
-    background-color: #0a1733;
     height: fit-content;
     flex-direction: column-reverse;
   }
@@ -54,7 +61,6 @@
   .blue {
     height: fit-content;
     padding: 10% 0%;
-    background-color: #0a1733;
   }
 
   .yellow {
