--- a/src/components/styles/home.module.css
+++ b/src/components/styles/home.module.css
@@ -6,10 +6,10 @@
   background-image: url("../images/Elements.svg");
   background-repeat: no-repeat;
   background-size: cover;
-  margin-bottom: 100px;
-  padding: 20px;
+  margin-bottom: 20px;
+  padding: 30px;
   min-height: 100vh;
-  height: auto;
+  height: 100%;
   /* url("../images/Background.svg"), */
 }
 .header h2 {
@@ -19,9 +19,7 @@
 }
 
 .intro {
-  position: relative;
-  left: 40%;
-  top: 10%;
+  transform: translate(40%, 10%);
 }
 
 .six {
@@ -33,25 +31,19 @@
   max-width: 515px;
   font-size: 24px;
   line-height: 40px;
-  position: relative;
-  top: -20px;
+  transform: translateY(-20%);
 }
 
 .topImage {
-  position: relative;
-  top: 20%;
-  right: 10%;
+  transform: translate(35%, 20%);
 }
 
 .topImage img {
-  position: relative;
-  left: 40%;
   max-width: 90%;
 }
 
 .bottomImage {
-  position: relative;
-  left: 10%;
+  transform: translate(10%, 20%);
 }
 
 .bottomImage img {
@@ -65,18 +57,13 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .header {
-    height: 110vh;
     display: flex;
     flex-direction: column;
-    padding-bottom: 100px;
-    gap: 0;
   }
 
   .header h2 {
     font-size: 70px;
     margin-bottom: 0;
-    position: relative;
-    left: 10%;
     width: fit-content;
   }
 
@@ -86,21 +73,21 @@
   }
 
   .intro {
-    left: 0%;
-    top: 8%;
+    transform: none;
   }
 
   .intro p {
     min-width: 299px;
     font-size: 18px;
     line-height: 32px;
+    transform: translateY(-10%);
   }
 
   .topImage {
     width: 327px;
-    right: 35%;
-    top: 10%;
-    margin-bottom: 30px;
+    transform: none;
+    display: flex;
+    justify-content: center;
   }
 
   .topImage img {
@@ -112,8 +99,7 @@
   }
 
   .bottomImage {
-    left: 0%;
-    top: 10%;
+    transform: translate(2%, 20%);
     display: flex;
   }
 
