--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap"); */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap");
@@ -6,7 +6,6 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
-  /* font-family: "Inter"; */
   font-family: "Mochiy Pop One", sans-serif;
   color: white;
 }
