--- a/src/components/styles/about.module.css
+++ b/src/components/styles/about.module.css
@@ -1,16 +1,19 @@
 .about {
-  text-align: center;
-  height: 100vh;
+  height: 100%;
+  min-height: 100vh;
   display: flex;
   place-content: center;
-  background: radial-gradient(
-    at top left,
-    rgba(30, 30, 30, 1) 0%,
-    #000000 100%
-  );
+  background: #000000;
+  padding: 5%;
 }
 
 .about h2 {
-  font-size: 3em;
-  margin-top: 80px;
+  font-size: 2rem;
+  color: #dba704;
+  text-align: left;
+}
+
+.about p {
+  line-height: 200%;
+  font-size: 115%;
 }
