--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -1,4 +1,3 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap"); */
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 @import url("https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap");
@@ -12,6 +11,8 @@
 html,
 body {
   min-height: 100%;
+  scroll-behavior: smooth;
+  scroll-padding: 5vh;
 }
 body {
   background: #000000;
@@ -51,7 +52,7 @@ p {
   padding-bottom: 8px;
   border-bottom: 3px solid transparent;
   transition: all 250ms ease-out;
-  color: #fff;
+  /* color: #fff; */
 }
 
 .navbar-item:hover {
@@ -157,9 +158,9 @@ footer {
 .navbar {
   transition: all 250ms ease-out;
   background-color: transparent;
-  background-color: #252526;
   padding: 5px;
   font-size: 20px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
 }
 
 a.navbar-item:hover {
