--- a/src/components/styles/team.module.css
+++ b/src/components/styles/team.module.css
@@ -9,6 +9,7 @@
 
 .team h2 {
   text-align: center;
+  color: #dba704;
 }
 
 .crew {
@@ -20,6 +21,7 @@
 
 .crewCard {
   width: 300px;
+  height: 100%;
   margin: 1rem;
   background-color: var(--secondary-color);
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
@@ -28,6 +30,40 @@
   position: relative;
 }
 
+.imgContainer {
+  height: 380px;
+}
+
 .crewCard img {
   width: 100%;
+  height: 100%;
+}
+
+.connect {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.connect h3 {
+  color: #fff;
+  padding: 15px;
+}
+
+.overview {
+  background-color: #000000;
+  padding: 2rem;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  max-height: 100%;
+  transform: translateY(101%);
+  transition: transform 0.3s ease-in;
+}
+
+.crewCard:hover .overview {
+  transform: translateY(0);
+  cursor: pointer;
 }
