--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -1,11 +1,12 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
-@import url("https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
-  font-family: "Mochiy Pop One", sans-serif;
+  font-family: "Kelly Slab", cursive;
   color: white;
 }
 html,
@@ -16,6 +17,7 @@ body {
 }
 body {
   background: #000000;
+  font-size: 18px;
 }
 
 .logo {
@@ -48,11 +50,11 @@ p {
 .navbar-item {
   display: inline-block;
   text-decoration: none;
-  font-weight: 500;
+  font-weight: bolder;
+  font-size: 30px;
   padding-bottom: 8px;
   border-bottom: 3px solid transparent;
   transition: all 250ms ease-out;
-  /* color: #fff; */
 }
 
 .navbar-item:hover {
@@ -139,6 +141,12 @@ footer {
 .copyright {
   color: #fff;
   margin: 40px auto;
+}
+
+.office h4,
+.contact h4 {
+  font-size: 30px;
+  font-weight: bolder;
 }
 .blomar p {
   display: flex;
