add rich flow page

--- a/src/components/styles/home.module.css
+++ b/src/components/styles/home.module.css
@@ -3,19 +3,18 @@
   grid-template-columns: 1fr 1fr;
   grid-gap: 40px;
   align-items: center;
-  background-image: url("../images/Elements.svg");
   background-repeat: no-repeat;
   background-size: cover;
   margin-bottom: 20px;
   padding: 30px;
   min-height: 100vh;
   height: 100%;
-  /* url("../images/Background.svg"), */
 }
 .header h2 {
   font-size: 150px;
   font-weight: 700;
   color: #fff;
+  font-family: "Inter", sans-serif;
 }
 
 .intro {
@@ -34,11 +33,8 @@
   transform: translateY(-20%);
 }
 
-.topImage {
-  transform: translate(35%, 20%);
-}
-
 .topImage img {
+  transform: translate(53%, 20%);
   max-width: 65%;
 }
 
@@ -48,7 +44,6 @@
 
 .bottomImage img {
   max-width: 30%;
-  border-radius: 30px;
 }
 
 .meet {
@@ -85,7 +80,7 @@
   }
 
   .topImage {
-    width: 327px;
+    width: 350px;
     transform: none;
     display: flex;
     justify-content: center;
@@ -93,6 +88,7 @@
 
   .topImage img {
     width: 100%;
+    transform: none;
   }
 
   .bottomImage img {
