--- a/src/components/styles/global.css
+++ b/src/components/styles/global.css
@@ -1,12 +1,12 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 @import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
-@import url("https://fonts.googleapis.com/css2?family=Kelly+Slab&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");
 * {
   margin: 0;
   padding: 0;
   text-decoration: none;
-  font-family: "Kelly Slab", cursive;
+  font-family: "Raleway", sans-serif;
   color: white;
 }
 html,
