--- a/src/components/styles/home.module.css
+++ b/src/components/styles/home.module.css
@@ -27,10 +27,10 @@
 }
 
 .intro p {
-  max-width: 515px;
+  /* max-width: 515px; */
   font-size: 24px;
   line-height: 40px;
-  transform: translateY(-20%);
+  transform: translateY(-10%);
 }
 
 .topImage img {
