--- a/src/components/styles/home.module.css
+++ b/src/components/styles/home.module.css
@@ -58,12 +58,13 @@
 @media only screen and (max-width: 600px) {
   .header {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+    min-height: fit-content;
   }
 
   .header h2 {
-    font-size: 70px;
-    margin-bottom: 0;
+    font-size: 60px;
+    margin: 0;
     width: fit-content;
   }
 
